@@ -36,10 +36,10 @@ ADD_DEFINITIONS(-DWTF_PLATFORM_CAIRO=1)
 SET(WTF_USE_FREETYPE 1)
 ADD_DEFINITIONS(-DUSE_FREETYPE=1)
 
-SET(JSC_EXECUTABLE_NAME jsc)
-SET(WTF_LIBRARY_NAME wtf)
-SET(JavaScriptCore_LIBRARY_NAME javascriptcore)
-SET(WebCore_LIBRARY_NAME webcore)
+SET(JSC_EXECUTABLE_NAME jsc_efl)
+SET(WTF_LIBRARY_NAME wtf_efl)
+SET(JavaScriptCore_LIBRARY_NAME javascriptcore_efl)
+SET(WebCore_LIBRARY_NAME webcore_efl)
 SET(WebKit_LIBRARY_NAME ewebkit)
 
 WEBKIT_FEATURE(ENABLE_AS_IMAGE "Enable SVG as image" DEFAULT ON SVG)
