@@ -1,3 +1,15 @@
+2010-07-27  Rafael Antognolli  <antognolli@profusion.mobi>
+
+        Reviewed by Antonio Gomes.
+
+        [EFL] Changing library names (appending suffix "_efl")
+        https://bugs.webkit.org/show_bug.cgi?id=42902
+
+        Instead of having libwebcore.so, we will have libwebcore_efl.so.
+        Same for javascriptcore and wtf when compiled as shared, and for jsc.
+
+        * cmake/OptionsEfl.cmake:
+
 2010-07-26  Martin Robinson  <mrobinson@igalia.com>
 
         Reviewed by Xan Lopez.
